FullQa New/src/objects/Connector_Target__c.object
<CustomObject>
    <fields>
        <fullName>Connector__c</fullName>
        <label>Connector</label>
        <referenceTo>Connector__c</referenceTo>
        <relationshipLabel>Connector Targets</relationshipLabel>
        <relationshipName>Connector_Targets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_Amount__c</fullName>
        <label>Target Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Type__c</fullName>
        <label>Target Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Opp</fullName>
                </value>
                <value>
                    <fullName>Deal</fullName>
                </value>
                <value>
                    <fullName>Booking</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>YTD__c</fullName>
        <formula>IF(Effective_Date__c &lt;= Today(), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YTD</label>
        <type>Checkbox</type>
    </fields>
    <label>Connector Target</label>
    <nameField>
        <displayFormat>CT{0000}</displayFormat>
        <label>Connector Target Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Connector Targets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>